[gd_scene load_steps=6 format=2]

[ext_resource path="res://tests/AuthControl.gd" type="Script" id=1]
[ext_resource path="res://fonts/Choplin-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.356863 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.243137 )

[node name="AuthControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LogIn" type="Button" parent="."]
margin_left = 117.0
margin_top = 79.0
margin_right = 405.0
margin_bottom = 187.0
text = "Login"

[node name="LogOut" type="Button" parent="."]
margin_left = 117.0
margin_top = 212.0
margin_right = 405.0
margin_bottom = 320.0
text = "LogOut"

[node name="nickname_rect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.529412 )

[node name="Label" type="Label" parent="nickname_rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -101.0
margin_right = 138.5
margin_bottom = -59.0
custom_fonts/font = SubResource( 1 )
text = "Enter nickname"

[node name="LineEdit" type="LineEdit" parent="nickname_rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -26.0
margin_right = 200.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
align = 1
max_length = 15

[node name="Button" type="Button" parent="nickname_rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 52.0
margin_right = 60.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "enter"
icon_align = 1

[node name="cancel" type="Button" parent="nickname_rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 123.0
margin_right = 65.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "cancel"

[connection signal="pressed" from="LogIn" to="." method="_on_LogIn_pressed"]
[connection signal="pressed" from="LogOut" to="." method="_on_LogOut_pressed"]
[connection signal="pressed" from="nickname_rect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="nickname_rect/cancel" to="." method="_on_cancel_pressed"]
